feat: adding IVA calculation